# kanevskiy_d_e

./: .gitignore  CMakeLists.txt  CMakePresets.json
kanevskiy_d_e/: CMakeLists.txt
kanevskiy_d_e/prj.lab/: CMakeLists.txt
kanevskiy_d_e/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
kanevskiy_d_e/prj.lab/arrayd/include/ArrayD/: arrayd.hpp
kanevskiy_d_e/prj.lab/arrayd/include/arrayd/: arrayd.hpp
kanevskiy_d_e/prj.lab/arrayt/include/arrayt/: arrayt.hpp
kanevskiy_d_e/prj.lab/matrixs/: matrixs.cpp
kanevskiy_d_e/prj.lab/matrixs/include/matrixs/: matrixs.hpp
kanevskiy_d_e/prj.lab/rational/: rational.cpp
kanevskiy_d_e/prj.lab/rational/include/rational/: rational.hpp
kanevskiy_d_e/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp  rational_test_1.cpp  rational_test_2.cpp
prj.lab/rational/: rational.cpp
prj.test/: CMakeLists.txt
